Fixed further alignment issues introduced from previous commit

--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ header {
   font-family: "Tangerine", cursive;
   font-size: 72px;
   color: #ecdbc9;
+  text-align: center;
 }
 
 header nav ul {
